# portico-docs

./: CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: CNAME  compose.md  demos.md  index.md  philosophy.md
docs/_templates/: README.md  REWRITE_PROMPT.md  kit_template.md  port_template.md
docs/adapters/: adapters.md  index.md
docs/kits/: audit.md  auth.md  cache.md  fastapi.md  file_storage.md  group.md  hierarchy.md  index.md  job.md  llm.md  rag.md  rbac.md
docs/ports/: audit.md  cache.md  document_processor.md  embedding.md  file_storage.md  group.md  index.md  job.md  job_creator.md  llm.md  (+10 more)
docs_tests/: __init__.py  conftest.py  test_architecture_examples.py  test_audit_examples.py  test_audit_kit_examples.py  test_auth_examples.py  test_cache_adapter_examples.py  test_cache_examples.py  test_core_examples.py  test_dependency_examples.py  test_document_processor_examples.py  test_embedding_examples.py  test_example.py  test_example_placeholder.py  test_exception_examples.py  test_fastapi_integration_examples.py  test_file_storage_examples.py  test_group_examples.py  test_group_kit_examples.py  test_job_examples.py  test_llm_examples.py  test_logging_examples.py  test_organization_examples.py  test_rag_examples.py  test_rbac_examples.py  test_session_examples.py  test_storage_adapter_examples.py  test_user_examples.py  test_user_kit_examples.py  test_vector_store_examples.py
scripts/: README.md  validate_docs_coverage.py  validate_markdown_style.py
site/: 404.html  index.html  objects.inv  sitemap.xml
(+4 files in other folders)
